feat: Add Phase 4 AI Disease Prediction section with optimized images and content

--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -768,6 +768,39 @@
                   Entropy), 프랙탈 차원 등 47개의 고차원 바이오마커를 추출하여 파킨슨병, 알츠하이머병, 당뇨망막병증 등 10개 신경학적 질환의 위험도를 예측하는 모델을 개발했습니다.
                 </p>
 
+                <div class="challenge-visual-grid"
+                  style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap; margin-bottom: 1.5rem;">
+                  <!-- 1. Setup -->
+                  <figure
+                    style="flex: 1 1 auto; max-width: 260px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
+                    <img src="../../assets/images/research/phase4_study2_experiment_setup.jpg" alt="실험 셋업"
+                      style="width: auto; max-width: 100%; height: auto; border-radius: 4px;">
+                    <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
+                      고정밀 동공 반응 측정 셋업
+                    </figcaption>
+                  </figure>
+
+                  <!-- 2. Risk Distribution -->
+                  <figure
+                    style="flex: 1 1 auto; max-width: 350px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
+                    <img src="../../assets/images/research/phase4_study2_risk_distribution.jpg" alt="질환 위험도 분포 분석"
+                      style="width: auto; max-width: 100%; height: auto; border-radius: 4px;">
+                    <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
+                      질환별 위험도 분포 (Risk Distribution)
+                    </figcaption>
+                  </figure>
+
+                  <!-- 3. Correlation Matrix -->
+                  <figure
+                    style="flex: 1 1 auto; max-width: 330px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
+                    <img src="../../assets/images/research/phase4_study2_correlation_matrix.jpg" alt="바이오마커 상관관계 매트릭스"
+                      style="width: auto; max-width: 100%; height: auto; border-radius: 4px;">
+                    <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
+                      동공 바이오마커 상관관계 매트릭스
+                    </figcaption>
+                  </figure>
+                </div>
+
                 <div class="challenge-visual-grid" style="display: flex; flex-wrap: wrap; gap: 1rem; margin: 1.5rem 0;">
                   <!-- Informational Cards for Biomarkers -->
                   <div
