--- a/research/overview.html
+++ b/research/overview.html
@@ -678,29 +678,42 @@
                   </h4>
                   <p style="font-size: 0.95rem; color: #475569; line-height: 1.7; margin-bottom: 1rem;">
                     This study proposed a methodology to objectively evaluate unconscious human sexual preferences
-                    through pupil responses. We collected and analyzed over 370,000 data points from 36 adults in their
-                    20s using an infrared pupil tracking system (66fps).
+                    through pupil responses. We established an infrared pupil tracking system based on a Basler
+                    high-speed industrial camera and a fixed-focus lens, and developed a pipeline to precisely extract
+                    and analyze minute pupil changes and response speeds from video data using our proprietary
+                    OpenCV-based algorithm.
                   </p>
 
                   <!-- Phase 4 Images -->
                   <div class="challenge-visual-grid"
                     style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap; margin-bottom: 1.5rem;">
+                    <!-- 1. Experiment Scene -->
                     <figure
-                      style="flex: 1 1 auto; max-width: 388px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
-                      <img src="../assets/images/research/phase4_eye_tracking_setup.jpg"
-                        alt="Infrared Pupil Tracking Setup"
+                      style="flex: 1 1 auto; max-width: 249px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
+                      <img src="../assets/images/research/phase4_experiment_scene_new.jpg" alt="Experiment Scene"
                         style="width: auto; max-width: 100%; height: auto; border-radius: 4px;">
                       <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
-                        Infrared Pupil Tracking System Setup
+                        Clear image acquisition even in low light with IR
                       </figcaption>
                     </figure>
+
+                    <!-- 2. Eye Tracking Monitor -->
                     <figure
-                      style="flex: 1 1 auto; max-width: 674px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
-                      <img src="../assets/images/research/phase4_experiment_scene.jpg"
-                        alt="Participant Experiment Scene"
+                      style="flex: 1 1 auto; max-width: 247px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
+                      <img src="../assets/images/research/phase4_eye_tracking_monitor.jpg" alt="Eye Tracking Monitor"
                         style="width: auto; max-width: 100%; height: auto; border-radius: 4px;">
                       <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
-                        Actual Experiment Scene (Fixation Task)
+                        Automated calculation & output of 10 pupil metrics after real-time ROI detection
+                      </figcaption>
+                    </figure>
+
+                    <!-- 3. Pupil Graph -->
+                    <figure
+                      style="flex: 1 1 auto; max-width: 1000px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
+                      <img src="../assets/images/research/phase4_pupil_graph.jpg" alt="Pupil Response Graph"
+                        style="width: 100%; height: auto; border-radius: 4px;">
+                      <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
+                        Time-series Pupil Response Analysis by Stimulus
                       </figcaption>
                     </figure>
                   </div>
@@ -741,6 +754,41 @@
                     and Fractal Dimension. We developed a model to predict the risk of 10 neurological diseases,
                     including Parkinson's, Alzheimer's, and Diabetic Retinopathy.
                   </p>
+
+                  <div class="challenge-visual-grid"
+                    style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap; margin-bottom: 1.5rem;">
+                    <!-- 1. Setup -->
+                    <figure
+                      style="flex: 1 1 auto; max-width: 260px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
+                      <img src="../assets/images/research/phase4_study2_experiment_setup.jpg" alt="Experiment Setup"
+                        style="width: auto; max-width: 100%; height: auto; border-radius: 4px;">
+                      <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
+                        High-precision Pupil Response Measurement Setup
+                      </figcaption>
+                    </figure>
+
+                    <!-- 2. Risk Distribution -->
+                    <figure
+                      style="flex: 1 1 auto; max-width: 350px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
+                      <img src="../assets/images/research/phase4_study2_risk_distribution.jpg"
+                        alt="Disease Risk Distribution"
+                        style="width: auto; max-width: 100%; height: auto; border-radius: 4px;">
+                      <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
+                        Risk Distribution by Disease Category
+                      </figcaption>
+                    </figure>
+
+                    <!-- 3. Correlation Matrix -->
+                    <figure
+                      style="flex: 1 1 auto; max-width: 330px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
+                      <img src="../assets/images/research/phase4_study2_correlation_matrix.jpg"
+                        alt="Biomarker Correlation Matrix"
+                        style="width: auto; max-width: 100%; height: auto; border-radius: 4px;">
+                      <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
+                        Pupillometric Biomarker Correlation Matrix
+                      </figcaption>
+                    </figure>
+                  </div>
 
                   <div class="challenge-visual-grid"
                     style="display: flex; flex-wrap: wrap; gap: 1rem; margin: 1.5rem 0;">
