fix: Optimize Phase 3 pipeline image (convert heavy PNG to JPG) to fix loading issue

--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -619,7 +619,7 @@
                         border-radius: 8px;
                         border: 1px solid #e2e8f0;
                       ">
-                  <img src="../../assets/images/research/phase3/structured_light_process.png" alt="구조화광 패턴 이미지 처리 과정"
+                  <img src="../../assets/images/research/phase3/structured_light_process.jpg" alt="구조화광 패턴 이미지 처리 과정"
                     style="width: 100%; height: auto; border-radius: 4px" />
                   <figcaption style="
                           margin-top: 0.5rem;
