--- a/research/overview.html
+++ b/research/overview.html
@@ -595,7 +595,7 @@
                         border-radius: 8px;
                         border: 1px solid #e2e8f0;
                       ">
-                  <img src="../assets/images/research/phase3/structured_light_process.png"
+                  <img src="../assets/images/research/phase3/structured_light_process.jpg"
                     alt="Structured Light Pattern Image Processing"
                     style="width: 100%; height: auto; border-radius: 4px" />
                   <figcaption style="
