feat: Enhance Home page with advanced research details and stronger value propositions

--- a/index.html
+++ b/index.html
@@ -1,235 +1,177 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MasVisio Research - Vision Rehabilitation Research</title>
-    <meta
-      name="description"
-      content="MasVisio Research is dedicated to advancing the field of vision science through innovative research and technology."
-    />
-    <meta
-      name="keywords"
-      content="Vision Rehabilitation, Research, Vision Science, MasVisio, Optometry, Myopia Control"
-    />
-    <meta
-      property="og:title"
-      content="MasVisio Research - Vision Rehabilitation Research"
-    />
-    <meta
-      property="og:description"
-      content="Pioneering vision science through innovative research and technology."
-    />
-    <meta property="og:type" content="website" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="assets/css/main.css?v=1.4" />
-    <link rel="stylesheet" href="assets/css/responsive.css?v=1.4" />
-    <link rel="stylesheet" href="assets/css/components.css?v=1.4" />
-  </head>
 
-  <body class="sidebar-layout">
-    <header class="mobile-header">
-      <a href="index.html" class="mobile-logo">
-        <h1>MasVisio<br />Research</h1>
-        <span class="logo-subtitle"
-          >Vision Intelligence &<br />Biomedical Engineering</span
-        >
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MasVisio Research - Vision Rehabilitation Research</title>
+  <meta name="description"
+    content="MasVisio Research is dedicated to advancing the field of vision science through innovative research and technology." />
+  <meta name="keywords"
+    content="Vision Rehabilitation, Research, Vision Science, MasVisio, Optometry, Myopia Control" />
+  <meta property="og:title" content="MasVisio Research - Vision Rehabilitation Research" />
+  <meta property="og:description" content="Pioneering vision science through innovative research and technology." />
+  <meta property="og:type" content="website" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="assets/css/main.css?v=1.4" />
+  <link rel="stylesheet" href="assets/css/responsive.css?v=1.4" />
+  <link rel="stylesheet" href="assets/css/components.css?v=1.4" />
+</head>
+
+<body class="sidebar-layout">
+  <header class="mobile-header">
+    <a href="index.html" class="mobile-logo">
+      <h1>MasVisio<br />Research</h1>
+      <span class="logo-subtitle">Vision Intelligence &<br />Biomedical Engineering</span>
+    </a>
+  </header>
+  <aside class="sidebar" role="navigation" aria-label="Main navigation">
+    <div class="sidebar-header">
+      <a href="index.html" class="sidebar-logo">
+        <h1>MasVisio Research</h1>
+        <span class="sidebar-subtitle">Vision Intelligence &<br />Biomedical Engineering</span>
       </a>
-    </header>
-    <aside class="sidebar" role="navigation" aria-label="Main navigation">
-      <div class="sidebar-header">
-        <a href="index.html" class="sidebar-logo">
-          <h1>MasVisio Research</h1>
-          <span class="sidebar-subtitle"
-            >Vision Intelligence &<br />Biomedical Engineering</span
-          >
-        </a>
+    </div>
+
+    <div class="lang-switch">
+      <a href="ko/index.html">🇰🇷</a> <span class="active">🇬🇧</span>
+    </div>
+
+    <nav class="sidebar-nav">
+      <a href="index.html" class="nav-item active">Home</a>
+      <a href="team/index.html" class="nav-item">Team</a>
+      <a href="research/overview.html" class="nav-item">Challenges</a>
+      <a href="publications/index.html" class="nav-item">Publications</a>
+      <a href="gallery/index.html" class="nav-item">Gallery</a>
+      <a href="partnership/index.html" class="nav-item">Services</a>
+      <a href="contact.html" class="nav-item">Partners</a>
+    </nav>
+
+    <div class="sidebar-footer">
+      <p class="copyright">&copy; 2025 MasVisio Research</p>
+      <div style="margin-top: 10px; font-size: 0.7rem">
+        <a href="privacy.html" style="color: #94a3b8; text-decoration: none">Privacy Policy</a>
+        |
+        <a href="contact.html" style="color: #94a3b8; text-decoration: none">Contact</a>
       </div>
+    </div>
+  </aside>
 
-      <div class="lang-switch">
-        <a href="ko/index.html">🇰🇷</a> <span class="active">🇬🇧</span>
-      </div>
-
-      <nav class="sidebar-nav">
-        <a href="index.html" class="nav-item active">Home</a>
-        <a href="team/index.html" class="nav-item">Team</a>
-        <a href="research/overview.html" class="nav-item">Challenges</a>
-        <a href="publications/index.html" class="nav-item">Publications</a>
-        <a href="gallery/index.html" class="nav-item">Gallery</a>
-        <a href="partnership/index.html" class="nav-item">Services</a>
-        <a href="contact.html" class="nav-item">Partners</a>
-      </nav>
-
-      <div class="sidebar-footer">
-        <p class="copyright">&copy; 2025 MasVisio Research</p>
-        <div style="margin-top: 10px; font-size: 0.7rem">
-          <a href="privacy.html" style="color: #94a3b8; text-decoration: none"
-            >Privacy Policy</a
-          >
-          |
-          <a href="contact.html" style="color: #94a3b8; text-decoration: none"
-            >Contact</a
-          >
-        </div>
-      </div>
-    </aside>
-
-    <main class="main-content">
-      <section
-        class="intro-section"
-        style="padding: 6rem 4rem; background-color: #ffffff; color: #1e293b"
-      >
-        <h2
-          style="
+  <main class="main-content">
+    <section class="intro-section" style="padding: 6rem 4rem; background-color: #ffffff; color: #1e293b">
+      <h2 style="
             font-size: 2rem;
             font-weight: 800;
             margin-bottom: 4rem;
             line-height: 1.2;
             color: #003366;
             text-align: left;
-          "
-        >
-          Challenging the Limits of<br />Vision Rehabilitation & Augmentation
-        </h2>
-        <div class="row" style="display: flex; align-items: center; gap: 4rem">
-          <div class="col-text" style="flex: 1">
-            <p
-              style="
+          ">
+        Challenging the Limits of<br />Vision Rehabilitation & Augmentation
+      </h2>
+      <div class="row" style="display: flex; align-items: center; gap: 4rem">
+        <div class="col-text" style="flex: 1">
+          <p style="
                 font-size: 1rem;
                 line-height: 1.7;
                 color: #475569;
                 margin-bottom: 2rem;
                 word-break: keep-all;
                 text-align: justify;
-              "
-            >
-              <strong
-                style="
+              ">
+            <strong style="
                   font-size: 1.25rem;
                   display: block;
                   margin-bottom: 0.8rem;
                   color: #003366;
-                "
-                >Optical Measurement</strong
-              >
-              Collecting ultra-precise ocular data using advanced optical
-              equipment.
-            </p>
-            <p
-              style="
+                ">Precision Optics Measurement</strong>
+            Capturing micro-level precision data, from 3D corneo-scleral shapes to minute pupil tremors, using Infrared
+            Structured Light and high-speed ROI tracking systems.
+          </p>
+          <p style="
                 font-size: 1rem;
                 line-height: 1.7;
                 color: #475569;
                 margin-bottom: 2rem;
                 word-break: keep-all;
                 text-align: justify;
-              "
-            >
-              <strong
-                style="
+              ">
+            <strong style="
                   font-size: 1.25rem;
                   display: block;
                   margin-bottom: 0.8rem;
                   color: #003366;
-                "
-                >AI Analysis</strong
-              >
-              Analyzing collected biometric data with deep learning algorithms
-              to predict diseases and derive optimal improvement plans.
-            </p>
-            <p
-              style="
+                ">AI Biomarker Analysis</strong>
+            Analyzing collected visual data with proprietary deep learning models to detect early signs of degenerative
+            brain diseases and ocular pathologies as non-invasive digital biomarkers.
+          </p>
+          <p style="
                 font-size: 1rem;
                 line-height: 1.7;
                 color: #475569;
                 margin-bottom: 0;
                 word-break: keep-all;
                 text-align: justify;
-              "
-            >
-              <strong
-                style="
+              ">
+            <strong style="
                   font-size: 1.25rem;
                   display: block;
                   margin-bottom: 0.8rem;
                   color: #003366;
-                "
-                >Vision augmented & rehabilitated by AI</strong
-              >
-              Providing optimized visual experiences to patients through 4D
-              myopia control and vision rehabilitation programs.
-            </p>
-          </div>
-          <div class="col-image" style="flex: 1; text-align: center">
-            <img
-              src="assets/images/vision_engineering_concept.png?v=5"
-              alt="Vision Engineering Process"
-              loading="lazy"
-              style="
+                ">Personalized Vision Solutions</strong>
+            Providing 4D myopia control and personalized vision rehabilitation solutions by integrating individual
+            ocular optical spectra and lifestyle data.
+          </p>
+        </div>
+        <div class="col-image" style="flex: 1; text-align: center">
+          <img src="assets/images/vision_engineering_concept.png?v=5" alt="Vision Engineering Process" loading="lazy"
+            style="
                 max-width: 100%;
                 height: auto;
                 border-radius: 12px;
                 box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-              "
-            />
+              " />
+        </div>
+      </div>
+    </section>
+
+    <section class="section" style="padding: 0 4rem 4rem">
+      <div class="container-fluid" style="padding: 0">
+        <h2 class="section-title" style="font-size: 2rem; margin-bottom: 2rem; color: #1e293b">
+          Research Areas
+        </h2>
+        <div class="features-grid">
+          <div class="feature-card">
+            <h3>4D Myopia Control</h3>
+            <img src="assets/images/research/myopia_control_4d.png" alt="4D Myopia Control" loading="lazy" />
+            <p>
+              Developing next-generation myopia inhibition platforms integrating spatial, temporal, spectral, and
+              individual dimensions, aiming for over 90% progression mitigation.
+            </p>
+          </div>
+          <div class="feature-card">
+            <h3>AI Disease Prediction</h3>
+            <img src="assets/images/research/ai_visual_diagnosis.png" alt="AI Diagnosis" loading="lazy" />
+            <p>
+              Analyzing 47 high-dimensional biomarkers including temporal pupil complexity to predict risks for 10 major
+              neurological diseases like Parkinson's and Dementia.
+            </p>
+          </div>
+          <div class="feature-card">
+            <h3>Precision 3D Reconstruction</h3>
+            <img src="assets/images/research/biometric_measurement.png?v=2" alt="Biometric Measurement"
+              loading="lazy" />
+            <p>
+              Implementing blind-spot-free lens fitting designs by visualizing the cornea and sclera in 3D using
+              Infrared Structured Light pattern projection technology.
+            </p>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
+  </main>
 
-      <section class="section" style="padding: 0 4rem 4rem">
-        <div class="container-fluid" style="padding: 0">
-          <h2
-            class="section-title"
-            style="font-size: 2rem; margin-bottom: 2rem; color: #1e293b"
-          >
-            Research Areas
-          </h2>
-          <div class="features-grid">
-            <div class="feature-card">
-              <h3>4D Myopia Control</h3>
-              <img
-                src="assets/images/research/myopia_control_4d.png"
-                alt="4D Myopia Control"
-                loading="lazy"
-              />
-              <p>
-                Researching next-generation myopia inhibition platforms
-                integrating spatial, temporal, spectral, and individual
-                dimensions.
-              </p>
-            </div>
-            <div class="feature-card">
-              <h3>AI Diagnosis</h3>
-              <img
-                src="assets/images/research/ai_visual_diagnosis.png"
-                alt="AI Diagnosis"
-                loading="lazy"
-              />
-              <p>
-                Developing precision visual diagnosis and personalized treatment
-                systems using deep learning.
-              </p>
-            </div>
-            <div class="feature-card">
-              <h3>Biometric Measurement</h3>
-              <img
-                src="assets/images/research/biometric_measurement.png?v=2"
-                alt="Biometric Measurement"
-                loading="lazy"
-              />
-              <p>
-                Leading non-invasive ocular biomarker measurement technology
-                using advanced optical technology.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
+  <script src="assets/js/main.js?v=1.7"></script>
+</body>
 
-    <script src="assets/js/main.js?v=1.7"></script>
-  </body>
 </html>
