--- a/ko/index.html
+++ b/ko/index.html
@@ -1,232 +1,170 @@
 <!doctype html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MasVisio Research - 시각재활 연구</title>
-    <meta
-      name="description"
-      content="MasVisio Research는 혁신적인 연구와 기술을 통해 시각 과학 분야를 발전시키는 데 전념하고 있습니다."
-    />
-    <meta
-      name="keywords"
-      content="시각재활, 연구, 시각 과학, MasVisio, 안경광학, 근시 제어"
-    />
-    <meta property="og:title" content="MasVisio Research - 시각재활 연구" />
-    <meta
-      property="og:description"
-      content="혁신적인 연구와 기술을 통해 시각 과학 분야를 선도합니다."
-    />
-    <meta property="og:type" content="website" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../assets/css/main.css?v=1.4" />
-    <link rel="stylesheet" href="../assets/css/responsive.css?v=1.4" />
-    <link rel="stylesheet" href="../assets/css/components.css?v=1.4" />
-  </head>
 
-  <body class="sidebar-layout">
-    <header class="mobile-header">
-      <a href="index.html" class="mobile-logo">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MasVisio Research - 시각재활 연구</title>
+  <meta name="description" content="MasVisio Research는 혁신적인 연구와 기술을 통해 시각 과학 분야를 발전시키는 데 전념하고 있습니다." />
+  <meta name="keywords" content="시각재활, 연구, 시각 과학, MasVisio, 안경광학, 근시 제어" />
+  <meta property="og:title" content="MasVisio Research - 시각재활 연구" />
+  <meta property="og:description" content="혁신적인 연구와 기술을 통해 시각 과학 분야를 선도합니다." />
+  <meta property="og:type" content="website" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="../assets/css/main.css?v=1.4" />
+  <link rel="stylesheet" href="../assets/css/responsive.css?v=1.4" />
+  <link rel="stylesheet" href="../assets/css/components.css?v=1.4" />
+</head>
+
+<body class="sidebar-layout">
+  <header class="mobile-header">
+    <a href="index.html" class="mobile-logo">
+      <h1>MasVisio<br />Research</h1>
+      <span class="logo-subtitle">Vision Intelligence &<br />Biomedical Engineering</span>
+    </a>
+  </header>
+  <!-- Sidebar Navigation -->
+  <aside class="sidebar" role="navigation" aria-label="메인 네비게이션">
+    <div class="sidebar-header">
+      <a href="index.html" class="sidebar-logo">
         <h1>MasVisio<br />Research</h1>
-        <span class="logo-subtitle"
-          >Vision Intelligence &<br />Biomedical Engineering</span
-        >
+        <span class="sidebar-subtitle">Vision Intelligence &<br />Biomedical Engineering</span>
       </a>
-    </header>
-    <!-- Sidebar Navigation -->
-    <aside class="sidebar" role="navigation" aria-label="메인 네비게이션">
-      <div class="sidebar-header">
-        <a href="index.html" class="sidebar-logo">
-          <h1>MasVisio<br />Research</h1>
-          <span class="sidebar-subtitle"
-            >Vision Intelligence &<br />Biomedical Engineering</span
-          >
-        </a>
+    </div>
+
+    <div class="lang-switch">
+      <span class="active">🇰🇷</span> <a href="../index.html">🇬🇧</a>
+    </div>
+
+    <nav class="sidebar-nav">
+      <a href="index.html" class="nav-item active">홈</a>
+      <a href="team/index.html" class="nav-item">구성원</a>
+      <a href="research/overview.html" class="nav-item">도전과제</a>
+      <a href="publications/index.html" class="nav-item">연구성과</a>
+      <a href="gallery/index.html" class="nav-item">갤러리</a>
+      <a href="partnership/index.html" class="nav-item">제공서비스</a>
+      <a href="contact.html" class="nav-item">파트너</a>
+    </nav>
+
+    <div class="sidebar-footer">
+      <p class="copyright">&copy; 2025 MasVisio Research</p>
+      <div style="margin-top: 10px; font-size: 0.7rem">
+        <a href="#" style="color: #94a3b8; text-decoration: none">개인정보처리방침</a>
+        |
+        <a href="contact.html" style="color: #94a3b8; text-decoration: none">문의하기</a>
       </div>
+    </div>
+  </aside>
 
-      <div class="lang-switch">
-        <span class="active">🇰🇷</span> <a href="../index.html">🇬🇧</a>
-      </div>
-
-      <nav class="sidebar-nav">
-        <a href="index.html" class="nav-item active">홈</a>
-        <a href="team/index.html" class="nav-item">구성원</a>
-        <a href="research/overview.html" class="nav-item">도전과제</a>
-        <a href="publications/index.html" class="nav-item">연구성과</a>
-        <a href="gallery/index.html" class="nav-item">갤러리</a>
-        <a href="partnership/index.html" class="nav-item">제공서비스</a>
-        <a href="contact.html" class="nav-item">파트너</a>
-      </nav>
-
-      <div class="sidebar-footer">
-        <p class="copyright">&copy; 2025 MasVisio Research</p>
-        <div style="margin-top: 10px; font-size: 0.7rem">
-          <a href="#" style="color: #94a3b8; text-decoration: none"
-            >개인정보처리방침</a
-          >
-          |
-          <a href="contact.html" style="color: #94a3b8; text-decoration: none"
-            >문의하기</a
-          >
-        </div>
-      </div>
-    </aside>
-
-    <!-- Main Content Area -->
-    <main class="main-content">
-      <section
-        class="intro-section"
-        style="padding: 6rem 4rem; background-color: #ffffff; color: #1e293b"
-      >
-        <h2
-          style="
+  <!-- Main Content Area -->
+  <main class="main-content">
+    <section class="intro-section" style="padding: 6rem 4rem; background-color: #ffffff; color: #1e293b">
+      <h2 style="
             font-size: 2rem;
             font-weight: 800;
             margin-bottom: 4rem;
             line-height: 1.2;
             color: #003366;
             text-align: left;
-          "
-        >
-          시각재활과 시각증강의 한계에 도전
-        </h2>
-        <div class="row" style="display: flex; align-items: center; gap: 4rem">
-          <div class="col-text" style="flex: 1">
-            <p
-              style="
+          ">
+        시각재활과 시각증강의 한계에 도전
+      </h2>
+      <div class="row" style="display: flex; align-items: center; gap: 4rem">
+        <div class="col-text" style="flex: 1">
+          <p style="
                 font-size: 1rem;
                 line-height: 1.7;
                 color: #475569;
                 margin-bottom: 2rem;
                 word-break: keep-all;
                 text-align: justify;
-              "
-            >
-              <strong
-                style="
+              ">
+            <strong style="
                   font-size: 1.25rem;
                   display: block;
                   margin-bottom: 0.8rem;
                   color: #003366;
-                "
-                >정밀 시각 측정</strong
-              >
-              첨단 광학 장비를 활용하여 초정밀 안구 데이터를 수집합니다.
-            </p>
-            <p
-              style="
+                ">정밀 광학 계측 (Precision Optics)</strong>
+            적외선 구조화광(Structured Light) 및 고속 ROI 추적 시스템을 통해 각공막의 3D 형상부터 동공의 미세한 떨림까지 마이크로 단위의 초정밀 데이터를 포착합니다.
+          </p>
+          <p style="
                 font-size: 1rem;
                 line-height: 1.7;
                 color: #475569;
                 margin-bottom: 2rem;
                 word-break: keep-all;
                 text-align: justify;
-              "
-            >
-              <strong
-                style="
+              ">
+            <strong style="
                   font-size: 1.25rem;
                   display: block;
                   margin-bottom: 0.8rem;
                   color: #003366;
-                "
-                >AI 기반 분석</strong
-              >
-              수집된 생체 데이터를 딥러닝 알고리즘으로 분석하여 질환을 예측하고
-              최적의 개선안을 도출합니다.
-            </p>
-            <p
-              style="
+                ">AI 바이오마커 분석 (AI Analysis)</strong>
+            수집된 시각 데이터를 독자적인 딥러닝 모델로 해석하여, 퇴행성 뇌질환 및 안구 병변의 징후를 조기에 탐지하는 비침습적 디지털 바이오마커를 연구합니다.
+          </p>
+          <p style="
                 font-size: 1rem;
                 line-height: 1.7;
                 color: #475569;
                 margin-bottom: 0;
                 word-break: keep-all;
                 text-align: justify;
-              "
-            >
-              <strong
-                style="
+              ">
+            <strong style="
                   font-size: 1.25rem;
                   display: block;
                   margin-bottom: 0.8rem;
                   color: #003366;
-                "
-                >맞춤형 시각 솔루션</strong
-              >
-              4D 근시 제어 및 시각 재활 프로그램을 통해 환자에게 최적화된 시각
-              경험을 제공합니다.
-            </p>
-          </div>
-          <div class="col-image" style="flex: 1; text-align: center">
-            <img
-              src="../assets/images/vision_engineering_concept.png?v=5"
-              alt="Vision Engineering Process"
-              loading="lazy"
-              style="
+                ">맞춤형 시각 솔루션 (Vision Solution)</strong>
+            개인별 안구 광학 스펙트럼과 라이프스타일 데이터를 통합 분석하여, 4D 근시 제어 및 개인맞춤형 시각 재활(Vision Rehabilitation) 솔루션을 제공합니다.
+          </p>
+        </div>
+        <div class="col-image" style="flex: 1; text-align: center">
+          <img src="../assets/images/vision_engineering_concept.png?v=5" alt="Vision Engineering Process" loading="lazy"
+            style="
                 max-width: 100%;
                 height: auto;
                 border-radius: 12px;
                 box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-              "
-            />
+              " />
+        </div>
+      </div>
+    </section>
+
+    <section class="section" style="padding: 0 4rem 4rem">
+      <div class="container-fluid" style="padding: 0">
+        <h2 class="section-title" style="font-size: 2rem; margin-bottom: 2rem; color: #1e293b">
+          연구 분야
+        </h2>
+        <div class="features-grid">
+          <div class="feature-card">
+            <h3>4D 근시 제어 기술</h3>
+            <img src="../assets/images/research/myopia_control_4d.png" alt="4D 근시 제어 기술" loading="lazy" />
+            <p>
+              공간, 시간, 파장, 개인차를 통합 고려한 차세대 근시 억제 플랫폼으로, 90% 이상의 진행 완화를 목표로 연구합니다.
+            </p>
+          </div>
+          <div class="feature-card">
+            <h3>AI 질환 예측 및 진단</h3>
+            <img src="../assets/images/research/ai_visual_diagnosis.png" alt="AI 기반 시각 진단" loading="lazy" />
+            <p>
+              동공 반응의 시간적 복잡성 등 47개 고차원 바이오마커를 분석하여 파킨슨, 치매 등 10대 신경 질환 위험도를 예측합니다.
+            </p>
+          </div>
+          <div class="feature-card">
+            <h3>초정밀 각공막 3D 재구성</h3>
+            <img src="../assets/images/research/biometric_measurement.png?v=2" alt="바이오메트릭 측정" loading="lazy" />
+            <p>
+              적외선 구조화광 패턴 투사 기술로 각막과 공막을 3D 시각화하여, 사각지대 없는 완벽한 렌즈 피팅 설계를 구현합니다.
+            </p>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
+  </main>
 
-      <section class="section" style="padding: 0 4rem 4rem">
-        <div class="container-fluid" style="padding: 0">
-          <h2
-            class="section-title"
-            style="font-size: 2rem; margin-bottom: 2rem; color: #1e293b"
-          >
-            연구 분야
-          </h2>
-          <div class="features-grid">
-            <div class="feature-card">
-              <h3>4D 근시 제어 기술</h3>
-              <img
-                src="../assets/images/research/myopia_control_4d.png"
-                alt="4D 근시 제어 기술"
-                loading="lazy"
-              />
-              <p>
-                공간, 시간, 스펙트럼, 개인 차원을 통합한 차세대 근시 억제
-                플랫폼을 연구합니다.
-              </p>
-            </div>
-            <div class="feature-card">
-              <h3>AI 기반 시각 진단</h3>
-              <img
-                src="../assets/images/research/ai_visual_diagnosis.png"
-                alt="AI 기반 시각 진단"
-                loading="lazy"
-              />
-              <p>
-                딥러닝을 활용한 정밀 시각 진단 및 개인맞춤형 치료 시스템을
-                개발합니다.
-              </p>
-            </div>
-            <div class="feature-card">
-              <h3>바이오메트릭 측정</h3>
-              <img
-                src="../assets/images/research/biometric_measurement.png?v=2"
-                alt="바이오메트릭 측정"
-                loading="lazy"
-              />
-              <p>
-                첨단 광학 기술을 이용한 비침습적 안구 생체지표 측정 기술을
-                선도합니다.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
+  <script src="../assets/js/main.js?v=1.7"></script>
+</body>
 
-    <script src="../assets/js/main.js?v=1.7"></script>
-  </body>
 </html>
