feat: enhance feature cards with detailed technical specs for myopia, ai diagnosis, and 3d reconstruction

--- a/index.html
+++ b/index.html
@@ -145,16 +145,16 @@
             <h3>4D Myopia Control</h3>
             <img src="assets/images/research/myopia_control_4d.png" alt="4D Myopia Control" loading="lazy" />
             <p>
-              Developing next-generation myopia inhibition platforms integrating spatial, temporal, spectral, and
-              individual dimensions, aiming for over 90% progression mitigation.
+              Researching next-generation 4D myopia control technology using ultra-precision ray tracing simulations
+              that consider peripheral retinal profiles and refraction at ocular media boundaries.
             </p>
           </div>
           <div class="feature-card">
             <h3>AI Disease Prediction</h3>
             <img src="assets/images/research/ai_visual_diagnosis.png" alt="AI Diagnosis" loading="lazy" />
             <p>
-              Analyzing 47 high-dimensional biomarkers including temporal pupil complexity to predict risks for 10 major
-              neurological diseases like Parkinson's and Dementia.
+              Developing AI systems that predict the probability of systemic diseases by integrating multi-dimensional
+              ocular signals such as retinal vessels, strabismus angle, ptosis, and pupillary response.
             </p>
           </div>
           <div class="feature-card">
@@ -162,8 +162,8 @@
             <img src="assets/images/research/biometric_measurement.png?v=2" alt="Biometric Measurement"
               loading="lazy" />
             <p>
-              Implementing blind-spot-free lens fitting designs by visualizing the cornea and sclera in 3D using
-              Infrared Structured Light pattern projection technology.
+              Building a core shape database for custom scleral lens prescriptions and artificial cornea fabrication by
+              precisely measuring and reconstructing 3D profiles of the cornea and sclera.
             </p>
           </div>
         </div>
