--- a/ko/index.html
+++ b/ko/index.html
@@ -142,21 +142,21 @@
             <h3>4D 근시 제어 기술</h3>
             <img src="../assets/images/research/myopia_control_4d.png" alt="4D 근시 제어 기술" loading="lazy" />
             <p>
-              공간, 시간, 파장, 개인차를 통합 고려한 차세대 근시 억제 플랫폼으로, 90% 이상의 진행 완화를 목표로 연구합니다.
+              주변부 망막 프로파일 및 안매체 경계면에서의 굴절을 고려한 초정밀 광선 추적 시뮬레이션을 통해, 개인별 최적화된 차세대 4D 근시 제어 기술을 연구합니다.
             </p>
           </div>
           <div class="feature-card">
             <h3>AI 질환 예측 및 진단</h3>
             <img src="../assets/images/research/ai_visual_diagnosis.png" alt="AI 기반 시각 진단" loading="lazy" />
             <p>
-              동공 반응의 시간적 복잡성 등 47개 고차원 바이오마커를 분석하여 파킨슨, 치매 등 10대 신경 질환 위험도를 예측합니다.
+              망막 혈관 구조, 사시각 편차, 눈꺼풀 처짐(Ptosis), 동공 반응 등 다차원 안구 생체 신호를 통합 분석하여 전신 질환의 발병 확률을 예측하는 AI 시스템을 개발합니다.
             </p>
           </div>
           <div class="feature-card">
             <h3>초정밀 각공막 3D 재구성</h3>
             <img src="../assets/images/research/biometric_measurement.png?v=2" alt="바이오메트릭 측정" loading="lazy" />
             <p>
-              적외선 구조화광 패턴 투사 기술로 각막과 공막을 3D 시각화하여, 사각지대 없는 완벽한 렌즈 피팅 설계를 구현합니다.
+              각막과 공막의 3D 프로파일을 정밀 계측 및 재구성하여, 맞춤형 공막 렌즈 처방과 인공 각막 제작을 위한 핵심 형상 데이터베이스를 구축합니다.
             </p>
           </div>
         </div>
