도전과제 이미지 레이아웃 조정

--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -282,23 +282,23 @@
                     굴절면</strong>에서 발생하는 모든 입사각과 굴절각을 기하광학적 관점에서 계산합니다.
                 </p>
                 <div class="challenge-visual-grid"
-                  style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap; margin-bottom: 1.5rem;">
+                  style="display: flex; gap: 1rem; justify-content: center; flex-wrap: nowrap; margin-bottom: 1.5rem;">
                   <figure
-                    style="flex: 1 1 auto; max-width: 300px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
+                    style="flex: 0 1 30%; max-width: 30%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; min-width: 0;">
                     <img src="../../assets/images/research/phase2/oct_analysis.png" alt="망막 OCT 측정"
                       style="width: 100%; height: auto; border-radius: 4px">
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">OCT
                       망막 곡률 실측</figcaption>
                   </figure>
                   <figure
-                    style="flex: 1 1 auto; max-width: 300px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
+                    style="flex: 0 1 30%; max-width: 30%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; min-width: 0;">
                     <img src="../../assets/images/research/phase2/optical_simulation.png" alt="Ray-tracing 시뮬레이션"
                       style="width: 100%; height: auto; border-radius: 4px">
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">6개
                       굴절면 Ray-tracing</figcaption>
                   </figure>
                   <figure
-                    style="flex: 1 1 auto; max-width: 300px; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
+                    style="flex: 0 1 30%; max-width: 30%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; min-width: 0;">
                     <img src="../../assets/images/research/phase2/curvature_graph.png" alt="곡률 변화 그래프"
                       style="width: 100%; height: auto; border-radius: 4px">
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
@@ -346,23 +346,23 @@
                 <div class="challenge-visual-grid"
                   style="display: flex; gap: 0.5rem; justify-content: center; flex-wrap: nowrap; margin-bottom: 1.5rem;">
                   <figure
-                    style="flex: 1; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; min-width: 0;">
+                    style="flex: 0 1 33.33%; max-width: 33.33%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; min-width: 0;">
                     <img src="../../assets/images/research/phase2/peripheral_setup_schematic.png" alt="측정 시스템 모식도"
                       style="width: 100%; height: auto; border-radius: 4px;">
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">주변부
                       망막 완전교정 pilot study</figcaption>
                   </figure>
                   <figure
-                    style="flex: 1; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; min-width: 0;">
+                    style="flex: 0 1 33.33%; max-width: 33.33%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; min-width: 0;">
                     <img src="../../assets/images/research/phase2/led_flicker.gif" alt="LED 회로도"
                       style="width: 100%; height: auto; border-radius: 4px;">
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">LED
                       제어 회로도</figcaption>
                   </figure>
                   <figure
-                    style="flex: 1; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; min-width: 0;">
+                    style="flex: 0 1 33.33%; max-width: 33.33%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; min-width: 0;">
                     <img src="../../assets/images/research/phase2/peripheral_prototype.gif" alt="시제품"
-                      style="width: 100%; height: auto; border-radius: 4px;">
+                      style="width: 100%; height: auto; border-radius: 4px; transform: scaleY(1.3); transform-origin: center top;">
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">주변부
                       망막 완전교정 측정장비 시제품</figcaption>
                   </figure>
@@ -404,7 +404,7 @@
                   <figure
                     style="flex: 0 0 65%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
                     <img src="../../assets/images/research/phase3/experiment_setup.png"
-                      alt="Raspberry Pi + Arduino 기반 실험 환경" style="width: 100%; height: auto; border-radius: 4px">
+                      alt="Raspberry Pi + Arduino 기반 실험 환경" style="width: 87%; height: auto; border-radius: 4px; display: block;">
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
                       Raspberry Pi + Arduino 기반 실시간 안굴절계 시제품</figcaption>
                   </figure>
@@ -416,7 +416,7 @@
                     <figure
                       style="width: 100%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
                       <img src="../../assets/images/research/phase3/retinoscope_view.png" alt="검영기 뷰"
-                        style="width: 100%; height: auto; border-radius: 4px">
+                        style="width: 75%; height: auto; border-radius: 4px; display: block; margin: 0 auto;">
                       <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">검영법
                         광학계 뷰</figcaption>
                     </figure>
@@ -427,16 +427,16 @@
                     <!-- Bottom Right -->
                     <figure
                       style="width: 100%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
-                      <img src="../../assets/images/research/phase3/ir_pupil_image.png" alt="적외선 동공 이미지"
-                        style="width: 100%; height: auto; border-radius: 4px">
-                      <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">IR
-                        카메라 망막 그림자 패턴</figcaption>
+                      <img src="../../assets/images/research/phase3/ir_pupil_image.png" alt="이진화 이미지 처리"
+                        style="width: 75%; height: auto; border-radius: 4px; display: block; margin: 0 auto;">
+                      <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">이진화
+                        이미지 처리</figcaption>
                     </figure>
                   </div>
                 </div>
 
                 <!-- Bottom: AI 학습 파이프라인 (0.75 scale) -->
-                <div style="margin-bottom: 1.5rem; text-align: center;">
+                <div style="margin: -0.5rem 0 1.5rem; text-align: center;">
                   <figure
                     style="background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; display: inline-block; width: 75%;">
                     <img src="../../assets/images/research/phase3/ai_learning_pipeline.png" alt="AI 학습 파이프라인"
@@ -474,16 +474,16 @@
                 <!-- 첫째 줄: 적외선 패턴 투사(좌) + 하이브리드 복원(우) -->
                 <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: nowrap; margin-bottom: 1rem;">
                   <figure
-                    style="flex: 0 1 40%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
+                    style="flex: 0 1 53%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
                     <img src="../../assets/images/research/phase3/structured_light_process.jpg" alt="구조화광 패턴 이미지 처리 과정"
                       style="width: 100%; height: auto; border-radius: 4px;">
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">적외선
                       패턴 투사 및 이미지 처리 파이프라인</figcaption>
                   </figure>
                   <figure
-                    style="flex: 0 1 60%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
+                    style="flex: 0 1 47%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
                     <img src="../../assets/images/research/phase3/3d_reconstruction_method.png" alt="복원 알고리즘"
-                      style="width: 100%; height: auto; border-radius: 4px;">
+                      style="width: 100%; height: auto; border-radius: 4px; transform: scale(0.78); transform-origin: center top;">
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">물리적 및
                       머신러닝 기반 하이브리드 복원</figcaption>
                   </figure>
