--- a/ko/research/overview.html
+++ b/ko/research/overview.html
@@ -362,7 +362,7 @@
                   <figure
                     style="flex: 0 1 33.33%; max-width: 33.33%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; min-width: 0;">
                     <img src="../../assets/images/research/phase2/peripheral_prototype.gif" alt="시제품"
-                      style="width: 100%; height: auto; border-radius: 4px; transform: scaleY(1.3); transform-origin: center top;">
+                      style="width: 100%; height: auto; border-radius: 4px; transform: scaleY(1.18); transform-origin: center top;">
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">주변부
                       망막 완전교정 측정장비 시제품</figcaption>
                   </figure>
@@ -404,19 +404,19 @@
                   <figure
                     style="flex: 0 0 65%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
                     <img src="../../assets/images/research/phase3/experiment_setup.png"
-                      alt="Raspberry Pi + Arduino 기반 실험 환경" style="width: 87%; height: auto; border-radius: 4px; display: block;">
+                      alt="Raspberry Pi + Arduino 기반 실험 환경" style="width: 100%; height: auto; border-radius: 4px; display: block; transform: scale(1.1); transform-origin: left top;">
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">
                       Raspberry Pi + Arduino 기반 실시간 안굴절계 시제품</figcaption>
                   </figure>
 
                   <!-- Right: Vertical Column -->
                   <div
-                    style="flex: 1; display: flex; flex-direction: column; gap: 0.5rem; justify-content: center; align-items: center;">
+                    style="flex: 1; display: flex; flex-direction: column; gap: 0.3rem; justify-content: center; align-items: center;">
                     <!-- Top Right -->
                     <figure
                       style="width: 100%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
                       <img src="../../assets/images/research/phase3/retinoscope_view.png" alt="검영기 뷰"
-                        style="width: 75%; height: auto; border-radius: 4px; display: block; margin: 0 auto;">
+                        style="width: 88%; height: auto; border-radius: 4px; display: block; margin: 0 auto;">
                       <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">검영법
                         광학계 뷰</figcaption>
                     </figure>
@@ -428,7 +428,7 @@
                     <figure
                       style="width: 100%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
                       <img src="../../assets/images/research/phase3/ir_pupil_image.png" alt="이진화 이미지 처리"
-                        style="width: 75%; height: auto; border-radius: 4px; display: block; margin: 0 auto;">
+                        style="width: 88%; height: auto; border-radius: 4px; display: block; margin: 0 auto;">
                       <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">이진화
                         이미지 처리</figcaption>
                     </figure>
@@ -436,7 +436,7 @@
                 </div>
 
                 <!-- Bottom: AI 학습 파이프라인 (0.75 scale) -->
-                <div style="margin: -0.5rem 0 1.5rem; text-align: center;">
+                <div style="margin: -1rem 0 1.5rem; text-align: center;">
                   <figure
                     style="background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; display: inline-block; width: 75%;">
                     <img src="../../assets/images/research/phase3/ai_learning_pipeline.png" alt="AI 학습 파이프라인"
@@ -472,9 +472,9 @@
                   <li style="margin-bottom: 0.5rem;"><strong>4. 3D 메쉬:</strong> 복원된 좌표점을 연결하여 정밀한 3D 토포그래피 메쉬 구현</li>
                 </ul>
                 <!-- 첫째 줄: 적외선 패턴 투사(좌) + 하이브리드 복원(우) -->
-                <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: nowrap; margin-bottom: 1rem;">
+                <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: nowrap; margin-bottom: 1rem; align-items: flex-start;">
                   <figure
-                    style="flex: 0 1 53%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px;">
+                    style="flex: 0 1 53%; background: #fff; padding: 0.5rem; border: 1px solid #e2e8f0; border-radius: 8px; transform: translateY(-6px);">
                     <img src="../../assets/images/research/phase3/structured_light_process.jpg" alt="구조화광 패턴 이미지 처리 과정"
                       style="width: 100%; height: auto; border-radius: 4px;">
                     <figcaption style="margin-top: 0.5rem; font-size: 0.8rem; color: #64748b; text-align: center;">적외선
